--- a/relogio.css
+++ b/relogio.css
@@ -1,1 +1,8 @@
-
+body{
+    background-image:
+      url(https://static8.depositphotos.com/1583396/1059/i/600/depositphotos_10595408-stock-photo-white-show-room-background.jpg);
+   background-attachment: fixed;
+   background-size:cobver;
+   background-position: center center;
+    }
+font-family: 'Gotham',Gotham ;
